# bdo_v1

./: .breakpoints  app.py  db_backup.py  db_init.sh  db_init_load_data.py  db_restore.py  func.py  pyproject.toml  readme.md  start.sh  temp_data.csv  test.py
backup/: datab.db
database/: datab.db
downloads/: add_candidate_df.xlsx  be_eo_data_template.xlsx  calendar_eo.xlsx  conflicts.xlsx  delete_eo.xlsx  eo_calendar_data_v2.xlsx  eo_diagram_data_df.xlsx  eo_master_data.xlsx  model_eo.xlsx  result_diagram_data_df.xlsx  sap_eo_data.xlsx  update_eo_data.xlsx
functions/: age_calc.py  calendar_operation_status_calc.py  delete_records_from_eo_master_data.py  eo_calendar_status.py  eo_data_calculation.py  generate_eo_diagram_data.py  generate_excel_add_candidates.py  generate_excel_calendar_status_eo.py  generate_excel_conflicts.py  generate_excel_master_eo.py  import_be_data.py  import_sap_eo_data.py  read_be_eo_xlsx_file.py  read_be_eo_xlsx_file_v3.py  read_delete_eo_xlsx_file.py  read_eo_models_xlsx_file.py  read_sap_eo_xlsx_file.py  read_update_eo_data_xlsx_file.py
initial_values/: initial_values.py
models/: models.py
routes/: routes.py
temp_data/: be_data.csv  category_spec.csv  delete_eo.xlsx  eo_class.csv  eo_diagram_data_df.csv  eo_master_data for update.csv  eo_master_temp_df.csv  eo_master_temp_out_df_2023_out.csv  excel_master_eo_df.csv  master_eo_df.csv  model_data.csv  operation_status.csv  result_df.xlsx  sap_eo_data.csv
templates/: base.html  home.html
uploads/: be_eo_data.xlsx  eo_models.xlsx  sap_eo_data.xlsx  update_eo_data.xlsx
(+31 files in other folders)
