[tool.poetry]
name = "repl_python3_bdov1"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Routes = "^2.5.1"
SQLAlchemy = "^1.4.36"
Flask = "^2.1.2"
Flask-Migrate = "^3.1.0"
Flask-SocketIO = "^5.2.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
pandas = "^1.4.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
